--- a/.github/workflows/etl_subte.yml
+++ b/.github/workflows/etl_subte.yml
@@ -14,11 +14,11 @@ jobs:
                 cache: 'pip' # caching pip dependencies
             - run: pip install -r requirements.txt
             - run: python ./scripts/extract.py
-            - name: Save data for Load Job
+            - name: Extrae, procesa guarad data en csv
               uses: actions/upload-artifact@v4
               with:
-                name: usuarios
-                path: users_data.csv
+                name: subte data
+                path: subte_data.csv
     load:
         runs-on: ubuntu-latest
         needs: extract
@@ -33,7 +33,7 @@ jobs:
               uses: actions/download-artifact@v4
               with:
                 name: usuarios
-            - name: Subir datos
+            - name: Subir datos a snowflake
               run: python ./scripts/load.py
               env:
                 SNOWSQL_USER: ${{ secrets.SNOWSQL_USER }}
