--- a/.github/workflows/etl_subte.yml
+++ b/.github/workflows/etl_subte.yml
@@ -2,8 +2,8 @@ name: ELT con Python subte
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '*/5 * * * *'  # Ejecutar cada minuto
+  # schedule:
+  #   - cron: '*/5 * * * *'  # Ejecutar cada minuto
 jobs:
     extract:
         runs-on: ubuntu-latest
